# ftSystem

./: .cursor‑tasks.md  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  hello_config.json  package.json  pyproject.toml  requirements.txt  temp_agentpartner_raw.txt  temp_before.txt  temp_main_raw.txt
__tmp_sess__/: session_HelloAgent_20250911_083644Z.jsonl  session_HelloAgent_20250911_084659Z.jsonl  session_HelloAgent_20250911_085629Z.jsonl  session_HelloAgent_20250911_085651Z.jsonl  session_HelloAgent_20250911_091049Z.jsonl  session_HelloAgent_20250911_091050Z.jsonl  session_HelloAgent_20250911_095756Z.jsonl  session_HelloAgent_20250911_095839Z.jsonl  session_HelloAgent_20250911_105357Z.jsonl  session_HelloAgent_20250911_105540Z.jsonl  session_HelloAgent_20250911_110909Z.jsonl  session_HelloAgent_20250911_110935Z.jsonl  session_HelloAgent_20250911_111206Z.jsonl  session_HelloAgent_20250911_112944Z.jsonl  session_HelloAgent_20250911_115200Z.jsonl  session_HelloAgent_20250911_115417Z.jsonl  session_HelloAgent_20250911_122048Z.jsonl  session_HelloAgent_20251022_224533Z.jsonl  session_HelloAgent_20251022_225601Z.jsonl  session_HelloAgent_20251022_225643Z.jsonl
docs/: AGENTPartner_instrukcjaModelu.txt  agentorask.mdc  agentpartnerENG.mdc  architecture.md  code_review_2025-10-22.md  code_review_summary.md  ftSystem_core.md  ftsystem_design_prompt.txt  plugins.md  raport FtSystem.txt
logs/: 2025_07_29_log_1.md  2025_07_29_log_2.md  2025_07_29_log_3.md  2025_09_10_log_10.md  2025_09_10_log_11.md  2025_09_10_log_12.md  2025_09_10_log_13.md  2025_09_10_log_14.md  (+30 more)
(+87 files in other folders)
