[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftsystem"
version = "0.1.0"
description = "Multi-Agent AI CLI orchestrator (Typer)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "fortenemy"}]
license = {text = "MIT"}
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.7",
  "pre-commit>=3.7",
]

[project.scripts]
ftsystem = "main:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.py-modules]
py-modules = ["main"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true

